syntax = "proto3";

service ClienteService {
  rpc ObterClienteAll(Void) returns (ListaClientes); // retorna uma coleção de clientes
  rpc ObterCliente(ClienteId) returns (Cliente); // retorna um cliente
  rpc CriarCliente(Cliente) returns (ClienteResponse); // retorna uma mensagem de resposta  
  rpc AtualizarCliente(Cliente) returns (ClienteResponse); // retorna uma mensagem de resposta
  rpc DeletarCliente(ClienteId) returns (ClienteResponse); // retorna uma mensagem de resposta
}

// Estrutura VAZIA
message Void {}

// Estrutura classe
message Cliente {
  // tipo nome_campo = índice da mensagem
  string id = 1;
  string nome = 2;
  string email = 3;
  int32 idade = 4;
}

// Coleção de clientes [] Array
message ListaClientes {
  repeated Cliente clientes = 1;
}

// Pegar a informação pelo ID
message ClienteId {
  string id = 1;
}

// Resposta
message ClienteResponse {
  string mensagem = 1;
}